# demo-finance-bank-support-tmp

./: .gitignore  README.md  engine.py  main.py  notebook.ipynb  pyproject.toml  requirements.txt
.multinear/: config.yaml  last_output.txt  multinear.db  task_runner.py
data/: acme_bank_faq.txt
engine/: engine.py
static/: app.js  index.html
